--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
 		"mocha": "^8.2.1",
 		"typescript": "^4.1.3",
 		"vscode-test": "^1.5.0"
-	}
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/sensecoder/MQL5SourcesTemplatesVSCodeExtension.git"
+	 },
+	 "homepage": "https://github.com/sensecoder/MQL5SourcesTemplatesVSCodeExtension/blob/master/README.md"
 }
