--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "mql5sourcefiletemplate",
-	"displayName": "MQL5SourceFilesTemplates",
-	"description": "Source files templates for MQL5 programs.",
+	"name": "mql5filestemplatewizard",
+	"displayName": "MQL5 Files Template Wizard",
+	"description": "Helps make files template for MQL5 programs.",
 	"publisher": "SenseCoder",
 	"version": "1.0.0",
 	"engines": {
